# mei

./: CLAUDE.md  Cargo.toml
docs/: provider-streaming.md
mei/: Cargo.toml
mei-agent/: Cargo.toml
mei-agent/src/: lib.rs
mei-config/: Cargo.toml
mei-config/src/: lib.rs
mei-provider/: Cargo.toml
mei-provider/src/: auth.rs  credential.rs  error.rs  event.rs  lib.rs  request.rs  store.rs  transport.rs
mei-provider/src/catalog/: all.rs  coding.rs  image.rs  mod.rs
mei-provider/src/transport/: mod.rs  sse.rs
mei-provider/src/wire/: mod.rs  openai.rs
mei-provider/tests/: auth.rs
mei-session/: Cargo.toml
mei-session/src/: entry.rs  error.rs  ids.rs  lib.rs  linear.rs  session.rs  tree.rs
mei-session/tests/: session.rs
mei/src/: config.rs  main.rs
