[package]
name = "mei-provider"
version = "0.1.0"
edition = "2021"

[features]
default = ["coding"]
coding = []
image = []
all = []
codegen = ["dep:ureq"]

[dependencies]
mei-config = { path = "../mei-config" }
eventsource-stream = "0.2"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
ureq = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mei-codegen"
required-features = ["codegen"]
